refractoring model sections

--- a/Front/src/app/features/screens/secretary/show-request-secretary/show-request-secretary.component.html
+++ b/Front/src/app/features/screens/secretary/show-request-secretary/show-request-secretary.component.html
@@ -73,7 +73,7 @@
         <div *ngIf="visible" class="alert alert-success">
           Votre Traitement a éte effectué avec succes
         </div>
-          <button class="btn btn-success" (click)="transferingRequest()" style="font-size: 12px;">
+          <button class="btn btn-success" (click)="transferringRequest()" style="font-size: 12px;">
            Transferer
           </button>&nbsp;&nbsp;
           <button class="btn btn-danger" (click)="rejectRequest()" style="font-size: 12px;">
