--- a/Front/src/app/features/screens/student/add-individual-request/add-request.component.html
+++ b/Front/src/app/features/screens/student/add-individual-request/add-request.component.html
@@ -5,11 +5,10 @@
              color="{{color}}"
              fade
              *ngIf="visible">
-      <strong>{{ errorMessage }}</strong>
+      <strong>{{ message }}</strong>
     </c-alert>
     <div class="card">
       <div class="card-header">
-
         <h5>Creation Requête</h5>
       </div>
 
