--- a/Front/src/app/features/screens/secretary/receive-request-secretary/receive-request-secretary.component.html
+++ b/Front/src/app/features/screens/secretary/receive-request-secretary/receive-request-secretary.component.html
@@ -1,47 +1,49 @@
 <section class="section">
-    <section class="section">
-      <div class="section-body">
-        <div class="row">
-          <div class="col-12">
-            <div class="card">
-              <div class="card-header">
-                <h4>Requetes recus</h4>
-              </div>
-              <div class="card-body">
-                <div class="table-responsive">
-                  <table class="table table-striped table-hover" id="tableExport" style="width: 100%">
-                    <thead>
-                    <tr>
-                      <th>Code</th>
-                      <th>Motif</th>
-                      <th>Intitule</th>
-                      <th>Matricule</th>
-                      <th>Pieces</th>
-                      <th>Date d'envoie</th>
-                      <th>Options</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr *ngFor="let request of requests; let i = index">
-                      <td>{{ i + 1 }}</td>
-                      <td>{{ request.title }}</td>
-                      <td>{{ request.content.substring(0 , 8) }} .....</td>
-                      <td>{{ request.sender.matricule }}</td>
-                      <td>{{ request.attachments.length }}</td>
-                      <td>{{ request.created_at | date: 'dd-MM-yyyy' }}</td>
-                      <td>
-                        <button cButton class="me-1" color="primary" (click)="showRequest(request.id)" style="font-size: 12px;">Details</button>
-                      </td>
-                    </tr>
-                    </tbody>
-                  </table>
-                </div>
+  <section class="section">
+    <div class="section-body">
+      <div class="row">
+        <div class="col-12">
+          <div class="card">
+            <div class="card-header">
+              <h4>Requetes recus</h4>
+            </div>
+            <div class="card-body">
+              <div class="table-responsive">
+                <table class="table table-striped table-hover" id="tableExport" style="width: 100%">
+                  <thead>
+                  <tr>
+                    <th>Code</th>
+                    <th>Motif</th>
+                    <th>Intitule</th>
+                    <th>Matricule</th>
+                    <th>Pieces</th>
+                    <th>Date d'envoie</th>
+                    <th>Options</th>
+                  </tr>
+                  </thead>
+                  <tbody>
+                  <tr *ngFor="let request of requests; let i = index">
+                    <td>{{ i + 1 }}</td>
+                    <td>{{ request.title }}</td>
+                    <td>{{ request.content.substring(0, 8) }} .....</td>
+                    <td>{{ request.sender.matricule }}</td>
+                    <td>{{ request.attachments.length }}</td>
+                    <td>{{ request.created_at | date: 'dd-MM-yyyy' }}</td>
+                    <td>
+                      <button cButton class="me-1" color="primary" (click)="showRequest(request.id)"
+                              style="font-size: 12px;">Details
+                      </button>
+                    </td>
+                  </tr>
+                  </tbody>
+                </table>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </section>
+    </div>
   </section>
+</section>
 
 
