--- a/Front/src/app/features/screens/acceuil/acceuil/acceuil.component.html
+++ b/Front/src/app/features/screens/acceuil/acceuil/acceuil.component.html
@@ -41,7 +41,7 @@
                   EasyRequest</h1>
                 <p data-aos="fade-up" data-aos-delay="300">Du problème à la solution, une requête à la fois.</p><br>
                 <a routerLink="/login" data-aos-delay="200" data-aos="fade-up" class="btn btn-primary pills"
-                   style="background-color: rgb(97, 119, 227); border: none; padding: 15px 22px;">
+                   style="background-color: rgb(10, 10, 11); border: none; padding: 15px 22px;">
                   <i class="material-icons" style="font-size: 24px; vertical-align: middle; margin-right: 10px;">exit_to_app</i>
                   <span style="font-size: 18px; vertical-align: middle;">Se connecter</span>
                 </a>
@@ -150,11 +150,12 @@
                 type="text"
                 class="form-control rounded-0"
                 placeholder="Email"
-              />
+              /> &nbsp;&nbsp;
               <input
                 type="submit"
-                class="btn btn-primary rounded-0"
+                class="btn btn-primary rounded-2"
                 value="Subscribe"
+                style="font-size: 10px; background-color: black;"
               />
             </div>
           </form>
