--- a/Front/src/assets/asset/css/style.css
+++ b/Front/src/assets/asset/css/style.css
@@ -657,7 +657,7 @@ h1, h2, h3, h4, h5,
     position: absolute;
     height: 100%;
     width: 100%;
-    background: #343a40;
+    background: #28292a;
     opacity: .9;
     border-bottom-right-radius: 0px; }
     @media (max-width: 991.98px) {
