--- a/Front/src/app/views/pages/login/login.component.html
+++ b/Front/src/app/views/pages/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="intro-section" id="home-section">
   <div class="slide-1"
-       style="background-image: url('../../../assets/img/pexels-cottonbro-studio-6209589.jpg'); height: auto;">
-    <div class="container" style="max-width: 800px; padding: 0;">
+       style="background-image: url('../../../assets/img/pexels-charlotte-may-5965930.jpg'); height: auto;">
+    <div class="container" style="max-width: 600px; padding: 0;">
       <div class="row align-items-center">
         <div class="col-12">
           <div class="row align-items-center">
@@ -15,7 +15,7 @@
               </c-alert>
               <form action="liste_requete3" method="post" [formGroup]="loginForm" (ngSubmit)="login()"
                     class="form-box">
-                <h3 class="h4 text-black mb-4 ">Connexion</h3>
+                <h3 class="h4 text-black mb-4 " style="font-weight: bold;">Connexion</h3>
                 <div class="form-group form-floating mt-3 d-flex flex-column">
                   <input type="email" pInputText formControlName="email" class="form-control custom-input"
                          placeholder="Adresse email" id="floatingInput" name="email" autocomplete="email">
@@ -39,7 +39,7 @@
                 </div>
 
                 <div class="form-group  mt-3 ">
-                  <button cButton type="submit" class="btn btn-primary px-4 btn-pill btn-block"
+                  <button cButton type="submit" class="btn btn px-4 btn-pill btn-block" style="background-color:black;"
                           [disabled]="!loginForm.valid">Se Connecter
                   </button>
                 </div>
