--- a/Front/src/app/containers/default-layout/default-header/default-header.component.html
+++ b/Front/src/app/containers/default-layout/default-header/default-header.component.html
@@ -49,7 +49,7 @@
         <h6 cDropdownHeader class="bg-light fw-semibold py-2">Account</h6>
       </li>
       <li>
-        <a routerLink="./" cDropdownItem>
+        <a routerLink="./profil" cDropdownItem>
           <svg cIcon class="me-2" name="cilUser"></svg>
           Profile
         </a>
