refractoring student side

--- a/Front/src/app/features/screens/staff/receives-request/receives-request.component.html
+++ b/Front/src/app/features/screens/staff/receives-request/receives-request.component.html
@@ -28,7 +28,7 @@
                     <td>Individuelle</td>
                     <td>{{ request.title }}</td>
                     <td>{{ request.content.substring(0 , 8) }} .....</td>
-                    <td>{{ request.sender.matricule }}</td>
+                    <td> request.sender.matricule </td>
                     <td>{{ request.attachments.length }}</td>
                     <td>{{ request.created_at | date: 'dd-MM-yyyy' }}</td>
                     <td>
