refractor secretary side

--- a/Front/src/app/features/screens/secretary/view-deadlines/view-deadlines.component.html
+++ b/Front/src/app/features/screens/secretary/view-deadlines/view-deadlines.component.html
@@ -49,6 +49,13 @@
 
 
 <div class="col-12 mt-5" *ngIf="selectedUe">
+<!--  <c-alert [(visible)]="visible"-->
+<!--           [dismissible]="dismissible"-->
+<!--           color="{{color}}"-->
+<!--           fade-->
+<!--           *ngIf="visible">-->
+<!--    <strong>{{ message }}</strong>-->
+<!--  </c-alert>-->
   <div class="card">
     <div class="card-header">
       <h5>Modification des delais pour l'ue {{selectedUe.code_ue}}</h5>
