--- a/Front/src/app/features/screens/secretary/add-deadline/add-deadline.component.html
+++ b/Front/src/app/features/screens/secretary/add-deadline/add-deadline.component.html
@@ -5,7 +5,7 @@
              color="{{color}}"
              fade
              *ngIf="visible">
-      <strong>{{ errorMessage }}</strong>
+      <strong>{{ message }}</strong>
     </c-alert>
     <div class="card">
       <div class="card-header">
