--- a/Front/src/app/features/screens/secretary/receive-request-secretary/receive-request-secretary.component.html
+++ b/Front/src/app/features/screens/secretary/receive-request-secretary/receive-request-secretary.component.html
@@ -23,10 +23,10 @@
                   </thead>
                   <tbody>
                   <tr *ngFor="let request of requests; let i = index">
-                    <td>{{ i + 1 }}</td>
+                    <td>{{ request.request_code }}</td>
                     <td>{{ request.title }}</td>
                     <td>{{ request.content.substring(0, 8) }} .....</td>
-                    <td>request.sender.matricule </td>
+                    <td>{{ request.sender.matricule }} </td>
                     <td>{{ request.attachments.length }}</td>
                     <td>{{ request.created_at | date: 'dd-MM-yyyy' }}</td>
                     <td>
