--- a/Front/src/app/features/screens/student/add-individual-request/add-request.component.html
+++ b/Front/src/app/features/screens/student/add-individual-request/add-request.component.html
@@ -106,7 +106,9 @@
           <div class="form-group row mb-2">
             <label class="col-form-label text-md-right col-12 col-md-3 col-lg-3"></label>
             <div class="col-sm-12 col-md-7">
-              <button type="submit" class="btn btn-primary"[disabled]="!requestForm.valid"  style="font-size: 12px;">Soumettre</button>
+              <button type="submit" class="btn btn-primary" [disabled]="!requestForm.valid" style="font-size: 12px;">
+                Soumettre
+              </button>
             </div>
           </div>
         </div>
