--- a/Front/src/app/features/screens/student/add-individual-request/add-request.component.html
+++ b/Front/src/app/features/screens/student/add-individual-request/add-request.component.html
@@ -106,7 +106,9 @@
           <div class="form-group row mb-2">
             <label class="col-form-label text-md-right col-12 col-md-3 col-lg-3"></label>
             <div class="col-sm-12 col-md-7">
-              <button type="submit" class="btn btn-primary" [disabled]="!requestForm.valid" style="font-size: 12px;">
+              <button type="submit"
+                      class="btn btn-primary" [disabled]="!requestForm.valid && !isReadonly" style="font-size: 12px;">
+                <span *ngIf="isLoading" class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
                 Soumettre
               </button>
             </div>
