--- a/Front/src/app/features/screens/student/list-request/list-request.component.html
+++ b/Front/src/app/features/screens/student/list-request/list-request.component.html
@@ -1,3 +1,8 @@
+<div  *ngIf="pageIsLoad" class="fade show" style="text-align: center; padding-top: calc(100vh / 2); height: 100vh">
+  <i class="spinner-grow spinner-grow-sm"></i>
+  <span class="m-1">Loading...</span>
+</div>
+
 <c-alert [(visible)]="visible"
          [dismissible]="dismissible"
          color="{{color}}"
